force scrollbar to fix center jump

--- a/week_15/PUBLIC/css/main.css
+++ b/week_15/PUBLIC/css/main.css
@@ -2298,6 +2298,9 @@ section:after,
   h2,
   h3 {
     page-break-after: avoid; } }
+html {
+  overflow-y: scroll; }
+
 body {
   background: #fcfcfc; }
 
